# AT2_EXP

./: README.md  github.txt  pyproject.toml  quick_train_from_csv.py  requirements.txt  retrain.py
api/: rain_model.pkl
data/processed/: daily_1980_2024.parquet  features_table.parquet
data/raw/: daily_1980.parquet  daily_1981.parquet  daily_1982.parquet  daily_1983.parquet  daily_1984.parquet  daily_1985.parquet  daily_1986.parquet  daily_1987.parquet  daily_1988.parquet  daily_1989.parquet  daily_1990.parquet  daily_1991.parquet  daily_1992.parquet  daily_1993.parquet  daily_1994.parquet  daily_1995.parquet  daily_1996.parquet  daily_1997.parquet  daily_1998.parquet  daily_1999.parquet  daily_2000.parquet  daily_2001.parquet  daily_2002.parquet  daily_2003.parquet  daily_2004.parquet  daily_2005.parquet  daily_2006.parquet  daily_2007.parquet
models/precipitation_fall/: precipitation_model.pkl
models/rain_or_not/: 25506751_rain_model.pkl
notebooks/: 36120-25SP-25506751-merged_experiments.ipynb  Experiment1_Rain_or_Not_7days.ipynb  Experiment2_Precipitation_Fall_3days.ipynb  dataset.csv
notebooks/data/processed/: 25506751_test_clf.csv  25506751_test_reg.csv  25506751_train_clf.csv  (+1 more)
notebooks/precipitation_fall/: 36120-25SP-25506751-experiment_2.ipynb
notebooks/rain_or_not/: 36120-25SP-25506751-experiment_1.ipynb
reports/: final_report.md
src/openmeteo_at2_25506751/: build_features_table.py  data_fetch.py  features.py  fetch_all_years.py  merge_daily.py  train.py
src/openmeteo_at2_25506751_oishik.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+2 files in other folders)
